--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,8 @@ CC=g++
 FLAGS=-std=c++0x
 SOURCES=main.cpp \
 		CPU.cpp \
-		MemoryCPU.cpp
+		MemoryCPU.cpp \
+		Cartridge.cpp
 BIN=NesEmulator
 
 all: $(SOURCES) $(BIN)
